update navegation and change title

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imersao Alura</title>
-    <link rel="stylesheet" href="assets/CSS/styless copy.css">
+    <title>Clubes Campeonato Brasileiro</title>
+    <link rel="stylesheet" href="assets/css/styless copy.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
