--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clubes Campeonato Brasileiro</title>
-    <link rel="stylesheet" href="assets/css/styless copy.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -82,8 +82,8 @@
             <br>Entre em contato com dev.elieltrindade@gmail.com
         </p>
     </footer>
-    <script src="assets/JS/clubes.js"></script>
-    <script src="assets/JS/app.js"></script>
+    <script src="assets/js/clubes.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
